fix: make one offset request